migrate cv info

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,14 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+      value: Alan Papalia
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: PhD Ocean Engineering
+      institution: MIT / WHOI Joint Program
+      year: 2019-Present
       description:
         - Description 1.
         - Description 2.
@@ -21,7 +17,7 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Federal teaching diploma
+    - title: BS Mechanical Engineering
       institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
       year: 1900
       description:
