--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ footer_text: #> <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> + <a 
 keywords: # jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: 🌎 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://alanpapalia.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
