--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Alan
+first_name: Robotic Exploration
 middle_name:
-last_name: Papalia
+last_name: Lab
 email: alanpapalia [at] gmail [dot] com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
@@ -13,12 +13,14 @@ footer_text: #> <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> + <a 
 keywords: # jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: 🌎 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: REL_logo.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://alanpapalia.github.io # the base hostname & protocol for your site
+url: https://robot-exploration.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
 last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
+
+logo: REL_logo.png # the logo image file name in /assets/img/ (if you want to use a logo, set this variable, otherwise leave it blank)
 
 # -----------------------------------------------------------------------------
 # Theme
@@ -120,7 +122,7 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 
 blog_name: Thoughts, theorems, and ramblings # blog_name will be displayed in your blog page
-blog_nav_title: Blog  # your blog must have a title for it to be displayed in the nav bar
+blog_nav_title:   # your blog must have a title for it to be displayed in the nav bar
 blog_description: A collection of unsolicited thoughts
 permalink: /blog/:year/:title/
 
